# dev-team-methodology

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  AGENT-CHECKLIST.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS-SUMMARY-FIXED.md  IMPROVEMENTS-SUMMARY.md  METHODOLOGY_QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  TASK-TYPES.md  WORKFLOW-VARIABLES.md  pyproject.toml  team-driven.md
.github/workflows/: docs.yml  lint.yml  release.yml  validate-templates.yml
.github/workflows/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.ps1  create-release-packages.sh  generate-release-notes.sh  update-version.sh
agent_templates/gemini/: GEMINI.md
agent_templates/qwen/: QWEN.md
docs/: AGENT-CAPABILITIES.md  AMP-GUIDE.md  EXAMPLES-README.md  FAQ.md  INDEX.md  QUICK-START.md  TASK-TYPES.md  TROUBLESHOOTING.md  WORKFLOW-VARIABLES.md
docs/EXAMPLES/001-simple-todo-list/: WALKTHROUGH.md  plan.md  spec.md  tasks.md
memory/: constitution.md  decision-log.md  team-skills.md  tech-stack.md
personas/: developer.md  devops-engineer.md  product-manager.md  quality-assurance.md  teams-responsibilities.md  technical-architect.md  ux-designer.md
scripts/: validate-phase.ps1  validate-phase.sh  validate-templates.py
scripts/bash/: common.sh  create-new-feature.sh  setup-personas.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: common.ps1  create-new-feature.ps1  implement.ps1  setup-personas.ps1  setup-plan.ps1  update-agent-context.ps1
src/team_cli/: __init__.py
templates/: agent-file-template.md  architecture-spec-template.md  checklist-template.md  constraints-template.md  decision-log-template.md  implementation-log-template.md  nfr-template.md  performance-budget-template.md  plan-template.md  risks-template.md  security-plan-template.md  spec-template.md  tasks-template.md  testing-strategy-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  decide.md  implement.md  personas.md  plan.md  retrospective.md  review.md  risks.md  specify.md  tasks.md
