[project]
name = "team-cli"
version = "0.1.0"
description = "A CLI tool for Team-Driven Development methodology"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1.0,<4.0.0",
    "requests>=2.28.0,<3.0.0",
    "httpx>=0.27.0",
    "platformdirs>=4.0.0",
    "readchar>=4.0.0",
    "truststore>=0.10.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

[project.scripts]
team = "team_cli.__init__:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/Nom-nom-hub/dev-team-methodology"
Repository = "https://github.com/Nom-nom-hub/dev-team-methodology.git"
"Bug Tracker" = "https://github.com/Nom-nom-hub/dev-team-methodology/issues"
Documentation = "https://github.com/Nom-nom-hub/dev-team-methodology#readme"